--- a/etc/requirements.txt
+++ b/etc/requirements.txt
@@ -1,5 +1,7 @@
-Authlib>=0.14.3
-Flask-Auth>=0.85
-Flask-HTTPAuth>=4.5.0
-passwordgenerator>=1.4
-filelock
+authlib>=1.3.2
+filelock>=3.16.1
+flask-auth>=0.85
+flask-httpauth>=4.8.0
+flask-login>=0.6.3
+passwordgenerator>=1.5.1
+werkzeug>=3.0.3
